@@ -1,6 +1,6 @@
 # $Id$
 
-noinst_PROGRAMS   = gu_tests
+noinst_PROGRAMS   = gu_tests gu_to_test
 gu_tests_SOURCES  =                      \
 	gu_tests.c                       \
 	gu_mem_test.c   gu_mem_test.h    \
@@ -13,7 +13,11 @@ gu_tests_SOURCES  =                      \
 gu_tests_INCLUDES = @CHECK_CFLAGS@
 gu_tests_LDADD    = ../src/libgalerautils.la @CHECK_LIBS@
 
-TESTS             = $(noinst_PROGRAMS)
+gu_to_test_SOURCES = gu_to_test.c
+gu_to_test_CFLAGS  = -I../src
+gu_to_test_LDADD   = ../src/libgalerautils.la
+
+TESTS = $(noinst_PROGRAMS)
 
 all: check
 
